syntax = "proto3";

import "google/protobuf/timestamp.proto";

import "kernel/ugc/schema/proto/schema.proto";


package NUgc.NSchema;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Version 3
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

enum EArticleState {
    Draft        = 0;
    Publishing   = 1;
    Public       = 2;
    Unpublishing = 3;
    Moderating   = 4;
}

enum EArticleContentType {
    PlainText = 0;
    GzipText  = 1;
    MdsId     = 2;
}

message TArticleVersion {
    string                    Id               = 1; // != article.id
    string                    Title            = 2;
    string                    Abstract         = 3;
    repeated string           Tags             = 4;
    EArticleState             State            = 5; // != 'Draft'
    string                    StateDescription = 9; // additional state description
    string                    TurboUrl         = 6; // https://yandex.ru/turbo?text=https://talk.yandex.ru/#TurboLink[&smth=else]
    google.protobuf.Timestamp Timestamp        = 7;
    string                    Content          = 8;
    EArticleContentType       ContentType      = 10; // PlainText by default
    google.protobuf.Timestamp UpdateTime       = 11;
    repeated string           Markers          = 12;
}

message TArticleScore {
    double Score = 1;
}

message TArticleStats {
    uint64 Day   = 1;
    uint64 Week  = 2;
    uint64 Month = 3;
    uint64 Total = 4;
}

message TArticleMoveHistory {
    string                    Id           = 1;
    google.protobuf.Timestamp Timestamp    = 2;
    string                    From         = 3; // display name
    string                    Message      = 4;
}

message TArticle {
    string              Id          = 1; // article id
    string              Title       = 2;
    string              Abstract    = 3;
    repeated string     Tags        = 4;
    string              Content     = 5;
    EArticleContentType ContentType = 16; // PlainText by default

    repeated TArticleVersion Version = 6; // as table

    TArticleStats ShowStats = 13; // показы на СЕРПе
    TArticleStats ViewStats = 14; // просмотры турбо страницы

    TArticleScore Score = 12; // as column

    repeated TArticleMoveHistory MoveHistory = 15;

    repeated string Markers = 17;

    // article creation time (first draft version)
    google.protobuf.Timestamp CreatedAt = 50;

    // article last modified time
    google.protobuf.Timestamp UpdatedAt = 51;

    // article publish time or null
    google.protobuf.Timestamp PublishedAt = 52;

    option (schema) = {
        Table: {
            Name:  "version"
            Field: "Version"
            Key:   "Id"
        }

        Column: {
            Name:  "score"
            Field: "Score"
        }

        Column: {
            Name: "show-stats"
            Field: "ShowStats"
        }

        Column: {
            Name:  "view-stats"
            Field: "ViewStats"
        }

        Table: {
            Name:  "move-history"
            Field: "MoveHistory"
            Key:   "Id"
        }
    };
}
